<resources>
    <string name="app_name">Lab1</string>
    <string name="label_email">E-mail</string>
    <string name="hint_email">Введите e-mail</string>
    <string name="hint_pass">Введите пароль</string>
    <string name="label_pass">Пароль</string>
    <string name="butt_log">Войти</string>
    <string name="butt_back">Назад</string>

    <string name="message_greeting">Привет, админ!</string>
    <string name="message_error">Ошибка авторизации!</string>

</resources>